Updated personal website link

--- a/index.html
+++ b/index.html
@@ -4,7 +4,23 @@
     <title>Marcdown - the online Markdown editor by Clyde D'Souza</title>
 	<meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <meta name="description" content="Marcdown- the online Markdown editor">
+    <meta name="description" content="Ever wanted to play around with .md files? Well, introducing Marcdown, the perfect markdown (.md) file editor built using Angular JS by Clyde D'Souza" />
+    <link rel="canonical" href="http://marcdown.azurewebsites.net/" />
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Marcdown- the online Markdown editor" />
+    <meta property="og:description" content="Ever wanted to play around with .md files? Well, introducing Marcdown, the perfect markdown (.md) file editor built using Angular JS by Clyde D'Souza" />
+    <meta property="og:url" content="http://marcdown.azurewebsites.net/" />
+    <meta property="og:site_name" content="Marcdown- the online Markdown editor" />
+    <meta property="article:publisher" content="http://www.facebook.com/ClydeDz" />
+    <meta property="og:image" content="https://raw.githubusercontent.com/ClydeDz/marcdown/master/assets/marcdown.png" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:description" content="Ever wanted to play around with .md files? Well, introducing Marcdown, the perfect markdown (.md) file editor built using Angular JS by Clyde D'Souza" />
+    <meta name="twitter:title" content="Marcdown- the online Markdown editor" />
+    <meta name="twitter:site" content="@ClydeDz" />
+    <meta name="twitter:domain" content="Marcdown- the online Markdown editor" />
+    <meta name="twitter:image:src" content="https://raw.githubusercontent.com/ClydeDz/marcdown/master/assets/marcdown.png" />
+    <meta name="twitter:creator" content="@ClydeDz" />
     <meta name="author" content="Clyde D'Souza'">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="shortcut icon" href="assets/marcdown.png">
